--- a/estilo/style.css
+++ b/estilo/style.css
@@ -16,7 +16,7 @@
     font-size: 1em;
 }
 
-html,
+
 body {
     max-width: 800px;
     min-width: 300px;
@@ -29,6 +29,7 @@ header {
     background-color: black;
     color: white;
     text-align: center;
+    border-radius: 20px 20px 0px 0px;
 
 }
 
@@ -43,13 +44,13 @@ header>p {
     padding-bottom: 50px;
 }
 
-a {
+header a {
     color: white;
     text-decoration: none;
     font-weight: bolder;
 }
 
-a:hover {
+header a:hover {
     text-decoration: underline;
 }
 
@@ -61,6 +62,7 @@ section {
     padding-left: 30px;
     font-family: var(--fonte3);
     font-size: 2.8vh;
+    
     
 }
 
@@ -104,4 +106,16 @@ footer {
     text-align: center;
     color: white;
     padding: 10px;
+    border-radius: 0px 0px 20px 20px;
+}
+
+footer a{
+    color: white;
+    text-decoration: none;
+   
+}
+
+footer a:hover{
+    color: red;
+
 }
